# break-detection

./: .gitignore  README.md  pyproject.toml
src/break_detection/: __init__.py  breakdetector.py  config.py  featuretransformer.py  main.py  outlierdetection.py
src/break_detection/pipeline/: __init__.py  breakdetector.py  breakfeature.py  featureengineering.py
